--- a/app/src/main/res/layout/jeu_roulette.xml
+++ b/app/src/main/res/layout/jeu_roulette.xml
@@ -24,17 +24,17 @@
         android:text="JOUER"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.535"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
+        app:layout_constraintVertical_bias="0.152" />
 
     <RadioGroup
         android:id="@+id/radioGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="92dp"
+        android:layout_width="109dp"
+        android:layout_height="183dp"
+        android:layout_marginTop="36dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.222"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtNumb_nombreChoisie">
 
@@ -42,14 +42,12 @@
             android:id="@+id/btnRad_impair"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="48dp"
             android:text="IMPAIR" />
 
         <RadioButton
             android:id="@+id/btnRad_pair"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="132dp"
+            android:layout_width="76dp"
+            android:layout_height="38dp"
             android:text="PAIR" />
     </RadioGroup>
 
