--- a/app/src/main/res/layout/casino_accueil.xml
+++ b/app/src/main/res/layout/casino_accueil.xml
@@ -3,14 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#202020"
+    android:backgroundTint="#353535">
 
     <TextView
         android:id="@+id/txt_bienvenue"
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:backgroundTint="#FFEB3B"
         android:gravity="center_horizontal|center_vertical"
         android:text="Bienvenue"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,15 +26,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:text="solde compte"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_bienvenue" />
 
     <Button
         android:id="@+id/btn_roulette"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="111dp"
+        android:layout_height="55dp"
         android:layout_marginTop="108dp"
+        android:backgroundTint="#9A1414"
         android:text="ROULETTE"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +47,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="108dp"
-        android:text="num gagnnat"
+        android:text="num gagnant"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,12 +56,15 @@
 
     <Button
         android:id="@+id/btn_banque"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="112dp"
+        android:layout_height="51dp"
+        android:backgroundTint="#ECD300"
         android:text="BANQUE"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_roulette"
-        app:layout_constraintVertical_bias="0.273" />
+        app:layout_constraintVertical_bias="0.124" />
 </androidx.constraintlayout.widget.ConstraintLayout>
