--- a/app/src/main/res/layout/connection.xml
+++ b/app/src/main/res/layout/connection.xml
@@ -3,13 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#353535"
+    android:backgroundTint="#353535">
 
     <Button
         android:id="@+id/btn_connection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="440dp"
+        android:backgroundTint="#9A1414"
         android:text="connection"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,10 +22,13 @@
         android:id="@+id/txt_NomUtilisateur"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#19777676"
+        android:backgroundTint="#19777676"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         android:text="Name"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/btn_connection"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
