--- a/app/src/main/res/layout/jeu_roulette.xml
+++ b/app/src/main/res/layout/jeu_roulette.xml
@@ -3,24 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#353535">
 
     <EditText
         android:id="@+id/txtNumb_mise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="4dp"
+        android:background="#19777676"
+        android:backgroundTint="#FFFFFF"
         android:ems="10"
         android:inputType="number"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/txtVMise" />
 
     <Button
         android:id="@+id/btn_jouer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
+        android:backgroundTint="#9A1414"
         android:text="JOUER"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,6 +41,7 @@
         android:layout_height="183dp"
         android:layout_marginTop="36dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.331"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtNumb_nombreChoisie">
 
@@ -42,23 +49,55 @@
             android:id="@+id/btnRad_impair"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="IMPAIR" />
+            android:text="IMPAIR"
+            android:textColor="#FFFFFF" />
 
         <RadioButton
             android:id="@+id/btnRad_pair"
             android:layout_width="76dp"
             android:layout_height="38dp"
-            android:text="PAIR" />
+            android:text="PAIR"
+            android:textColor="#FFFFFF" />
     </RadioGroup>
 
     <EditText
         android:id="@+id/txtNumb_nombreChoisie"
+        android:layout_width="82dp"
+        android:layout_height="31dp"
+        android:layout_marginTop="4dp"
+        android:background="#19777676"
+        android:backgroundTint="#FFFFFF"
+        android:ems="10"
+        android:foregroundTint="#DFDFDF"
+        android:inputType="number"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.303"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtVNbChoisie" />
+
+    <TextView
+        android:id="@+id/txtVMise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:ems="10"
-        android:inputType="number"
+        android:layout_marginTop="56dp"
+        android:text="mise : "
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.272"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txtVNbChoisie"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:text="nombre choisie ( 1 - 36 ) : "
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.405"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtNumb_mise" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
