--- a/app/src/main/res/layout-land/connection.xml
+++ b/app/src/main/res/layout-land/connection.xml
@@ -1,31 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#353535"
+    android:backgroundTint="#353535">
 
-    <Button
-        android:id="@+id/btn_connection2"
+    <EditText
+        android:id="@+id/txt_NomUtilisateur3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="180dp"
-        android:text="connection"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_NomUtilisateur2"
-        app:layout_constraintVertical_bias="0.505" />
-
-    <TextView
-        android:id="@+id/txt_NomUtilisateur2"
-        android:layout_width="150dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="76dp"
-        android:text="Nom utilisateur"
+        android:layout_marginTop="52dp"
+        android:background="#19777676"
+        android:backgroundTint="#19777676"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
+        android:text="Name"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/btn_connection"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.499"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.633" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_connection3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="244dp"
+        android:backgroundTint="#9A1414"
+        android:text="connection"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_NomUtilisateur3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
