--- a/app/src/main/res/layout/banque.xml
+++ b/app/src/main/res/layout/banque.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#353535"
+    android:background="#FFFFFF"
     android:backgroundTint="#353535">
 
     <Button
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:background="#19777676"
+        android:backgroundTint="#FFFFFF"
         android:ems="10"
         android:inputType="number"
         android:textColor="#F8F8F8"
